refactor: standardize on Stream.toList() and drop redundant @SuppressWarnings
Replace .collect(Collectors.toList()) with .toList() (Java 16+) across 10
files; all collected lists are read-only so the immutable result is safe.
Remove the now-dangling Collectors imports and an unnecessary
@SuppressWarnings("unchecked") in QueryArchitectureGraphTool.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>